<?xml version="1.0"?>
<package format="2">
  <name>jetbot_control</name>
  <version>0.0.1</version>
  <description>Jetbot AI Kit controller configuration</description>

  <author email="issaiass@hotmail.com">Rangel Alvarado</author>

  <maintainer email="issaiass@hotmail.com">Rangel Alvarado</maintainer>

  <license>CCSA2.0</license>

  <url type="website">http://daqsyspty.com/</url>
  <url type="bugtracker">https://github.com/issaiass/jetbot_control/issues</url>
  <url type="repository">https://github.com/issaiass/jetbot_control</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslaunch</build_depend>

  <exec_depend>diff_drive_controller</exec_depend>
  <exec_depend>jetbot_description</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>rostopic</exec_depend>

  <!-- Future implementation -->
  <!--exec_depend>robot_localization</exec_depend-->


  <export>
  </export>
</package>
