<?xml version="1.0"?>
<package format="2">
  <name>jetbot_desktop</name>
  <version>0.0.1</version>
  <description>Metapackage for Jetbot AI Kit visualization software</description>

  <maintainer email="issaiass@hotmail.com">Rangel Alvarado</maintainer>

  <license>CCSA2.0</license>

  <url type="website">http://daqsyspty.com</url>
  <url type="bugtracker">https://github.com/issaiass/jetbot_desktop/issues</url>
  <url type="repository">https://github.com/issaiass/jetbot_desktop</url>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>jetbot_viz</exec_depend>
  <!--exec_depend>jetbot_msgs</exec_depend-->  

  <export>
    <metapackage/>
  </export>
</package>