<?xml version="1.0"?>
<package format="2">
  <name>jetbot_slam</name>
  <version>0.0.1</version>
  <description>Launch files for jetbot SLAM using different algorithms</description>
  <author email="issaiass@hotmail.com">Rangel Alvarado</author>
  <maintainer email="issaiass@hotmail.com">Rangel Alvarado</maintainer>
  <license>CCSA2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <!--exec_depend>cartographer</exec_depend-->
  <exec_depend>map_server</exec_depend>
  <exec_depend>move_base</exec_depend>
  <exec_depend>roslaunch</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>
  
  <test_depend>roslaunch</test_depend>
  
  <export>
  </export>
</package>